<resources>
    <string name="app_name">AndroidSeminar1</string>

    <!--signin page-->

    <string name="sopthub">SOPTHub</string>
    <string name="login">로그인</string>
    <string name="id">깃허브 아이디</string>
    <string name="password">비밀번호</string>
    <string name="input_id">깃허브 아이디를 입력해주세요</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="signup">계정이 없으신가요? <b>회원가입</b></string>
    <string name="signup2">회원가입</string>
    <!--signup page-->
    <string name="name">이름</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="sign_complete">회원가입 완료</string>

    <!--home_activity-->
    <string name="kimdaeho">김대호</string>
    <string name="name_daeho">나이</string>
    <string name="daeho_english">Daeho Kim</string>
    <string name="id_daeho">kdh2769</string>
    <string name="introduce">|초보 개발자 김대호</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--foll0ow-layout-->

    <string name="btn_follow">팔로워 목록</string>
    <string name="btn_repo">레포지토리 목록</string>


    <string name="android_repo">안드로이드 과제 레포지토리</string>
    <string name="ios_repo">iOS 과제 레포지토리</string>
    <string name="server_repo">서버 과제 레포지토리</string>
    <string name="wab_repo">웹 과제 레포지토리</string>

</resources>