<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/et_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_signin"
        android:ems="10"
        android:hint="@string/input_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/et_signup_pw"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_signin"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/signup2"
        android:textColor="@color/gray1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginBottom="6dp"
        android:text="@string/name"
        android:textColor="@color/gray1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_signup_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/id"
        android:textColor="@color/gray1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_signup_id"
        app:layout_constraintStart_toStartOf="@+id/et_signup_name" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/gray1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="34dp"

        android:layout_marginBottom="6dp"

        app:layout_constraintStart_toStartOf="@+id/et_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_id" />


    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_signin"
        android:ems="10"
        android:hint="@string/input_name"
        android:layout_marginBottom="34dp"

        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_signup_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_full_edge"
        android:text="@string/sign_complete"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>